fix Dockerfile for frontend, rename user class field, add unit tests

--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/register/register.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/register/register.component.html
@@ -9,8 +9,8 @@
               <p class="text-white-50 mb-5">Please enter your information!</p>
 
               <div class="form-outline form-white mb-4">
-                <input type="text" id="Username" class="form-control form-control-lg" formControlName="username" />
-                <label class="form-label" for="Username">Username</label>
+                <input type="text" id="pseudonym" class="form-control form-control-lg" formControlName="pseudonym" />
+                <label class="form-label" for="Pseudonym">Pseudonym</label>
               </div>
 
               <div class="form-outline form-white mb-4">
