add home component and auth-guard

--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/login/login.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/login/login.component.html
@@ -20,13 +20,11 @@
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
             </div>
-
             <div>
               <p class="mb-0">Don't have an account?
-                <a href="#/register" class="text-white-50 fw-bold">Signup</a>
+                <a routerLink="/register"  class="text-white-50 fw-bold" role="button">Signup</a>
               </p>
             </div>
-
           </div>
         </div>
       </div>
