--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/register/register.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/register/register.component.html
@@ -28,7 +28,7 @@
 
             <div>
               <p class="mb-0">Already have an account?
-                <a href="#/login" class="text-white-50 fw-bold">Login</a>
+                <a routerLink="/login" class="text-white-50 fw-bold" role="button">Login</a>
               </p>
             </div>
 
