--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-not-auth/home-not-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-not-auth/home-not-auth.component.html
@@ -3,7 +3,7 @@
 
 <section class="hero-section text-light">
   <div class="container py-5">
-    <div class="row align-items-center">
+    <div class="row align-items-center stroke-row">
 
       <div class="col-md-6 mb-4">
         <h1>Rejoignez l'aventure dès le début !</h1>
