--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/common/header/header.component.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/common/header/header.component.css
@@ -20,6 +20,46 @@
   color: black !important;
 }
 
+.search-box {
+  position: relative;
+}
+
+.search-icon {
+  font-size: 1.3rem;
+  color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.search-input {
+  width: 0;
+  opacity: 0;
+  padding: 0;
+  margin-left: 8px;
+  border: 1px solid white;
+  background: transparent;
+  color: white;
+  transition: all 0.3s ease;
+  font-size: 0.9rem;
+}
+
+/* Affiche le champ au survol */
+.search-box:hover .search-input {
+  width: 160px;
+  opacity: 1;
+  padding: 4px 8px;
+}
+
 /* .btn {
   color: black !important;
 } */
+
+body.dark-theme {
+  background-color: #121212;
+  color: white;
+}
+
+body.light-theme {
+  background-color: #f8f9fa;
+  color: black;
+}
