--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/common/footer/footer.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/common/footer/footer.component.html
@@ -3,11 +3,10 @@
     <div class="row">
 
       <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
-        <a class="navbar-brand d-flex align-items-center justify-content-center justify-content-md-start" href="#">
-          <img src="" alt="logo" width="30" height="30" class="me-2">
-          nexora
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="assets/logoLight-png.png" alt="logo" width="30" height="30" class="me-2">
+          <span class="fw-bold">nexora</span>
         </a>
-        <p class="mt-3">Nexora2025</p>
       </div>
       <div class="col-md-9 border-start border-secondary ps-3">
         <div class="row">
@@ -27,6 +26,7 @@
             </ul>
           </div>
         </div>
+          <p class="mt-3">Nexora2025</p>
       </div>
     </div>
   </div>
