--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid px-3">
-    <a class="navbar-brand d-flex align-items-center" href="#">
+    <a class="navbar-brand d-flex align-items-center" style="cursor: pointer;" (click)="navigateAccueil()">
       <img src="assets/logoLight-png.png" alt="logo" width="30" height="30" class="me-2">
       <span class="fw-bold">nexora</span>
     </a>
@@ -14,10 +14,10 @@
       <!-- Menu principal -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Accueil</a>
+          <a class="nav-link active" aria-current="page" style="cursor: pointer;" (click)="navigateAccueil()">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home-auth">Acheter des cryptos</a>
+          <a class="nav-link" routerLink="/dashboard-buy-crypto">Acheter des cryptos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/markets">Marchés</a>
