--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.css
@@ -13,12 +13,15 @@
 }
 
 .crypto-table {
-  background-color: #1a182b;
+  background-color: var(--card-color);
   border-radius: 12px;
 }
 
+span {
+  color: var(--text-color);
+}
 .crypto-row:hover {
-  background-color: #2a283f;
+  background-color: var(--cta-color);
   cursor: pointer;
   border-radius: 8px;
 }
