--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.html
@@ -10,12 +10,12 @@
       </div>
 
       <div *ngFor="let coin of coins" class="crypto-row d-flex justify-content-between align-items-center py-2 px-3"
-        (click)="selectCoin(coin)"  [routerLink]="['/crypto', coin.cryptoName.toLowerCase()]">
+        (click)="openCoinInNewTab(coin)">
         <div class="d-flex align-items-center" style="width: 33%;">
           <img [src]="coin.icon" alt="{{ coin.cryptoName }}" width="30" height="30" class="me-2" />
-          <span class="text-light fw-medium">{{ coin.cryptoName }}</span>
+          <span>{{ coin.cryptoName }}</span>
         </div>
-        <div style="width: 33%;" class="text-light">
+        <div style="width: 33%;">
           {{ coin.currentPrice | currency:'USD':'symbol':'1.2-2' }}
         </div>
         <div style="width: 33%; text-align: right;" [ngClass]="{
