--- a/nexora-crypto-dashboard/webapps/dashboard/src/styles.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/styles.css
@@ -1,5 +1,6 @@
 body.dark-theme {
-  --background-color: #121212;
+  --background-color: #05050F;
+  /* --background-color: #121212; */
   --text-color: white;
   --section-color: #1A1A2E;
   --hero-color: #05050F;
