--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-not-auth/home-not-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-not-auth/home-not-auth.component.html
@@ -4,7 +4,7 @@
 <!-- Home page -->
 <section class="hero-section text-light">
   <div class="container py-5">
-    <div class="row align-items-center stroke-row">
+    <div class="row align-items-center">
       <div class="col-md-6 mb-4">
         <h1>Rejoignez l'aventure dès le début !</h1>
         <p>Soyez parmi les premiers à explorer la simulation et à tester vos stratégies en cryptomonnaie.</p>
