--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/footer/footer.component.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/footer/footer.component.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--footer-bg-color);
+  background-color: var(--background-color);
   color: var(--text-color);
 }
 
