--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.css
@@ -1,15 +1,25 @@
 .hero-section {
-  background-color: #05050F;
+  background-color: var(--background-color);
 }
+
 .card {
-  background-color: #1A1A2E;
+  background-color: var(--card-color);
 }
 
 .card-body {
-  background-color: #1A1728;
-  border: 5px solid #0E0E18;
-  border-radius: 8px;
+  background-color: var(--card-color);
+  border: 5px solid var(--stroke-border);
+  border-radius: 10px;
+  padding: 15px;
 }
+
+
+.stroke-row {
+  background-color: var(--stroke-color);
+  border: 8px solid var(--stroke-border);
+  border-radius: 10px;
+}
+
 
 .btn-primary {
   background-color: #C3B8FD;
@@ -20,17 +30,28 @@
   color: black !important;
 }
 
-.cta-section {
-  background-color: #262C38;
+p {
+  color: var(--text-color);
 }
 
-.stroke-row {
-  background-color: #0B0B15;
-  border: 8px solid #0E0E18;
-  border-radius: 10px;
+span {
+  color: var(--text-color);
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .table {
-    background-color: #1A1728;
+  --bs-table-bg: var(--card-color);
 }
 
+th {
+  color: var(--title-tb-color);
+  font-size: 13px;
+  font-weight: 400;
+}
+
+td {
+  color: var(--text-color);
+  font-size: 15px;
+  font-weight: 500;
+}
