--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
@@ -1,14 +1,14 @@
 <!-- HEADER -->
 <app-header></app-header>
 
-<section class="hero-section text-light py-5">
+<section class="hero-section py-4">
   <div class="container">
-    <div class="row justify-content-center">
+    <div class="row align-items-center stroke-row">
       <!-- Solde de compte-->
-      <div class="col-md-5 mb-4">
-        <div class="card bg-dark text-light p-4 h-100 rounded-4 shadow-sm">
-          <h5>Commencez à explorer et testez vos stratégies !</h5>
-          <p class="mt-2">Votre solde :</p>
+      <div class="col-md-5">
+        <div class="p-4">
+          <h1>Commencez à explorer et testez vos stratégies !</h1>
+          <p>Votre solde :</p>
           <p class="fs-4 fw-semibold text-white mb-3">
             {{balance !== null ? (balance + ' Points') : 'Chargement...' }}
           </p>
@@ -17,14 +17,14 @@
       </div>
 
       <!-- Bloc droit les cryptos possédez -->
-      <div class="col-md-7 mb-4">
-        <div class="card bg-dark text-light p-4 h-100 rounded-4 shadow-sm">
-          <h6>Voici les cryptos que vous possédez</h6>
+      <div class="col-md-7">
+        <div class="card-body">
+          <h2>Voici les cryptos que vous possédez</h2>
 
           <div *ngFor="let wallet of wallets" class="d-flex justify-content-between align-items-center mt-3 border-bottom pb-2">
             <div class="d-flex align-items-center">
               <!-- <img [src]="wallet.logoUrl" [alt]="wallet.cryptoName" class="me-2" style="width: 24px;"> -->
-              <strong>{{ wallet.cryptoName }}</strong>
+              <span>{{ wallet.cryptoName }}</span>
             </div>
             <span>{{ wallet.quantity }}</span>
             <span *ngIf="wallet.variationPercentage >= 0 ? 'text-success' : 'text-danger'">
@@ -33,6 +33,7 @@
           </div>
 
         </div>
+
       </div>
     </div> 
 
@@ -40,12 +41,12 @@
     <div class="row justify-content-center mt-4">
       <div class="col-12">
         <div class="text-center text-white my-4">
-          <h5>Historique des Transactions</h5>
+          <h2>Historique des Transactions</h2>
         </div>
 
-        <div class="card bg-dark text-light p-4 rounded-4 shadow-sm">
+        <div class="card-body">
           <div class="table-responsive">
-            <table class="table table-borderless text-light align-middle mb-0">
+            <table class="table table-borderless align-middle mb-0">
               <thead class="text-secondary">
                 <tr>
                   <th>Date</th>
