--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.html
@@ -4,9 +4,9 @@
   <div class="crypto-table-container p-3">
     <div class="crypto-table p-3 rounded-3">
       <div class="table-header d-flex justify-content-between px-3 pb-2 text-light fw-bold">
-        <span style="width: 33%;">Nom</span>
-        <span style="width: 33%;">Prix</span>
-        <span style="width: 33%; text-align: right;">Variation</span>
+        <span>Nom</span>
+        <span>Prix</span>
+        <span>Variation</span>
       </div>
 
       <div *ngFor="let coin of coins" class="crypto-row d-flex justify-content-between align-items-center py-2 px-3"
