--- a/nexora-crypto-dashboard/webapps/dashboard/src/styles.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/styles.css
@@ -1,3 +1,23 @@
+app-root {
+  background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
+app-root h1 {
+  color: var(--text-color);
+  font-weight: 600;
+  font-size: 20px;
+}
+
+app-root h2 {
+  color: var(--text-color);
+  font-weight: 400;
+  font-size: 20px;
+}
+
+
 body.dark-theme {
   --background-color: #05050F;
   /* --background-color: #121212; */
@@ -5,9 +25,10 @@ body.dark-theme {
   --section-color: #1A1A2E;
   --hero-color: #05050F;
   --cta-color: #262C38;
-  --card-color: #1A1A2E;
+  --card-color: #1A1728;
   --stroke-color: #0B0B15;
   --stroke-border: #0E0E18;
+  --title-tb-color: #B7B5B5;
   --footer-bg-color: #05050F;
   --footer-link-color: white;
 }
@@ -21,6 +42,7 @@ body.light-theme {
   --card-color: #ffffff;
   --stroke-color: #f8f9fa;
   --stroke-border: #cccccc;
+  --title-tb-color: #3b3b3b;
   --footer-bg-color: #f1f1f1;
   --footer-link-color: black;
 }
