implement refresh token

--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/dashboard-buy-crypto/dashboard-buy-crypto.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/dashboard-buy-crypto/dashboard-buy-crypto.component.html
@@ -5,6 +5,9 @@
     <div class="row align-items-center stroke-row">
       <!-- Liste des cryptomonnaies -->
       <div class="col-md-8">
+        <div *ngIf="errorMessage" class="alert alert-danger text-center">
+          {{errorMessage}}
+        </div>
         <app-crypto-details (coinSelected)="onCoinSelected($event)"></app-crypto-details>
       </div>
 
@@ -12,20 +15,12 @@
       <div class="col-md-4">
         <form (ngSubmit)="submit()">
           <div class="d-flex mb-3">
-            <button
-              class="btn btn-toggle me-2"
-              type="button"
-              [class.active]="mode === 'buy'"
-              (click)="mode = 'buy'; calculateConversion()"
-            >
+            <button class="btn btn-toggle me-2" type="button" [class.active]="mode === 'buy'"
+              (click)="mode = 'buy'; calculateConversion()">
               Acheter
             </button>
-            <button
-              class="btn btn-toggle"
-              type="button"
-              [class.active]="mode === 'sell'"
-              (click)="mode = 'sell'; calculateConversion()"
-            >
+            <button class="btn btn-toggle" type="button" [class.active]="mode === 'sell'"
+              (click)="mode = 'sell'; calculateConversion()">
               Vendre
             </button>
           </div>
@@ -36,15 +31,8 @@
               <span>{{ mode === 'buy' ? 'Dépense' : 'Vendre' }}</span>
               <span>{{ mode === 'buy' ? 'Points' : selectedCoin?.cryptoName }}</span>
             </div>
-            <input
-              type="number"
-              class="form-control text-center mt-2"
-              name="amountInput"
-              [(ngModel)]="amountInput"
-              (input)="calculateConversion()"
-              required
-              min="0.000001"
-            />
+            <input type="number" class="form-control text-center mt-2" name="amountInput" [(ngModel)]="amountInput"
+              (input)="calculateConversion()" required min="0.000001" />
           </div>
 
           <!-- Montant calculé -->
@@ -60,11 +48,7 @@
             </h2>
           </div>
 
-          <button
-            type="submit"
-            class="btn submit-btn w-100"
-            [disabled]="!selectedCoin || !amountInput"
-          >
+          <button type="submit" class="btn submit-btn w-100" [disabled]="!amountInput">
             Soumettre
           </button>
         </form>
