--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/login/login.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/login/login.component.html
@@ -7,6 +7,9 @@
             <div class="mb-md-5 mt-md-4 pb-5">
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
               <p class="text-white-50 mb-5">Please enter your login and password!</p>
+              <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+                {{ errorMessage }}
+              </div>
 
               <div class="form-outline form-white mb-4">
                 <input type="email" id="typeEmailX" class="form-control form-control-lg" formControlName="email" />
@@ -14,7 +17,8 @@
               </div>
 
               <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" formControlName="password" />
+                <input type="password" id="typePasswordX" class="form-control form-control-lg"
+                  formControlName="password" />
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
 
@@ -22,7 +26,7 @@
             </div>
             <div>
               <p class="mb-0">Don't have an account?
-                <a routerLink="/register"  class="text-white-50 fw-bold" role="button">Signup</a>
+                <a routerLink="/register" class="text-white-50 fw-bold" role="button">Signup</a>
               </p>
             </div>
           </div>
