--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/login/login.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/login/login.component.html
@@ -5,30 +5,42 @@
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
             <div class="mb-md-5 mt-md-4 pb-5">
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+              <a class="navbar-brand d-flex align-items-center">
+                <img src="assets/logoLight-png.png" alt="logo" width="30" height="30" class="me-2">
+                <span class="fw-bold">nexora</span>
+              </a>
+              <p class="text-white-50 mb-5">Veuilliez entrer votre identifiant et votre mot de passe!</p>
+
               <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
                 {{ errorMessage }}
               </div>
-
               <div class="form-outline form-white mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" formControlName="email" />
                 <label class="form-label" for="typeEmailX">Email</label>
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" formControlName="email" placeholder="example@gmail.com"/>
+                <div *ngIf="submit && loginForm.get('email')?.hasError('required')" class="text-danger">
+                  Le champ est requis.
+                </div>
+                <div *ngIf="submit && loginForm.get('email')?.hasError('pattern')" class="text-danger mt-1">
+                  L'email doit respecter le format.
+                </div>
               </div>
-
               <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg"
-                  formControlName="password" />
-                <label class="form-label" for="typePasswordX">Password</label>
+                <label class="form-label" for="typePasswordX">Mot de passe</label>
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" formControlName="password" />
+                <div *ngIf="submit && loginForm.get('password')?.hasError('required')" class="text-danger">
+                  Le champ est requis.
+                </div>
               </div>
 
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Connexion</button>
             </div>
+
             <div>
-              <p class="mb-0">Don't have an account?
-                <a routerLink="/register" class="text-white-50 fw-bold" role="button">Signup</a>
+              <p class="mb-0">Vous n'avez pas de compte ?
+                <a routerLink="/register" class="text-white-50 fw-bold" role="button">Inscription</a>
               </p>
             </div>
+
           </div>
         </div>
       </div>
