--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.html
@@ -68,8 +68,6 @@
           </li>
         </ng-template>
 
-
-
         <li class="nav-item">
           <button class="btn ms-2" [ngClass]="isDarkMode ? 'btn-outline-dark' : 'btn-outline-light'"
             (click)="toggleTheme()" title="Changer le thème">
@@ -80,3 +78,6 @@
     </div>
   </div>
 </nav>
+<div class="d-flex justify-content-center">
+  <div class="navbar-underline"></div>
+</div>
