--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.css
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.css
@@ -17,6 +17,8 @@
 
 /* Liens */
 .nav-link {
+  display: flex;
+  justify-content: center;
   color: var(--text-color);
   transition: color 0.3s ease;
 }
@@ -103,4 +105,12 @@
 
 .dropdown-item i {
   font-size: 16px;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(183,181,181,1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler-icon:hover {
+  opacity: 0.8;
 }
