--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/chart-detail/chart-detail.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/chart-detail/chart-detail.component.html
@@ -42,7 +42,7 @@
         </form>
       </section>
 
-      <section class="col-lg-6">
+      <section class="col-lg-6 mb-3">
         <h5 class="text-center text-white mb-2">
           Cours pour {{ cryptoId.toUpperCase() }}
         </h5>
