--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
@@ -60,11 +60,11 @@
               <tbody>
                 <tr *ngFor="let transaction of transactions">
                   <td>{{ transaction.dateTransaction | date:'dd-MM-yyyy' }}</td>
-                  <td>{{ transaction.type }}</td>
+                  <td>{{ transaction.type | transactionType}}</td>
                   <td>{{ transaction.cryptoName }}</td>
-                  <td>{{ transaction.quantity }}</td>
-                  <td>{{ transaction.unitPrice | number:'1.2-2' }} €</td>
-                  <td>{{ transaction.totalAmount | number:'1.2-2' }} €</td>
+                  <td>{{ transaction.quantity | number:'1-2-4'}}</td>
+                  <td>{{ transaction.unitPrice | number:'1.2-4' }} €</td>
+                  <td>{{ transaction.totalAmount | number:'1.2-4' }} €</td>
                 </tr>
               </tbody>
             </table>
