--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/crypto-details/crypto-details.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/crypto-details/crypto-details.component.html
@@ -12,7 +12,7 @@
                   'text-success': coin.priceChangePercentage >= 0,
                   'text-danger': coin.priceChangePercentage < 0
                 }">
-                  {{ coin.priceChangePercentage >= 0 ? '+' : '-'}}{{ coin.priceChangePercentage | number:'1.2-2'}}
+                  {{ coin.priceChangePercentage >= 0 ? '+' : ' '}}{{ coin.priceChangePercentage | number:'1.2-2'}}
                 </span>
               </li>
             </ul>
