--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
@@ -23,10 +23,10 @@
 
           <div *ngFor="let wallet of wallets" class="d-flex justify-content-between align-items-center mt-3 border-bottom pb-2">
             <div class="d-flex align-items-center">
-              <!-- <img [src]="wallet.logoUrl" [alt]="wallet.cryptoName" class="me-2" style="width: 24px;"> -->
+              <img [src]="coin.icon" alt="{{ coin.cryptoName }}" width="30" height="30" class="me-2" />
               <span>{{ wallet.cryptoName }}</span>
             </div>
-            <span>{{ wallet.quantity }}</span>
+            <span>{{ wallet.quantity | number:'1.2-4'}}</span>
             <span *ngIf="wallet.variationPercentage >= 0 ? 'text-success' : 'text-danger'">
               {{ wallet.variationPercentage >= 0 ? '+' : '' }}{{ wallet.variationPercentage | number:'1.2-2' }}%
             </span>
@@ -62,7 +62,7 @@
                   <td>{{ transaction.dateTransaction | date:'dd-MM-yyyy' }}</td>
                   <td>{{ transaction.type | transactionType}}</td>
                   <td>{{ transaction.cryptoName }}</td>
-                  <td>{{ transaction.quantity | number:'1-2-3'}}</td>
+                  <td>{{ transaction.quantity | number:'1.2-4'}}</td>
                   <td>{{ transaction.unitPrice | number:'1.2-3' }} €</td>
                   <td>{{ transaction.totalAmount | number:'1.2-3' }} €</td>
                 </tr>
