--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
@@ -23,7 +23,7 @@
 
           <div *ngFor="let wallet of wallets" class="d-flex justify-content-between align-items-center mt-3 border-bottom pb-2">
             <div class="d-flex align-items-center">
-              <img [src]="coin.icon" alt="{{ coin.cryptoName }}" width="30" height="30" class="me-2" />
+              <img [src]="wallet.logoUrl" [alt]="wallet.cryptoName" class="me-2" style="width: 24px;">
               <span>{{ wallet.cryptoName }}</span>
             </div>
             <span>{{ wallet.quantity | number:'1.2-4'}}</span>
